tests/expectations/compiler/core/algorithms/pedersen64_hash_to_scalar.out
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:26:25
     |
  26 |         let a: scalar = Pedersen64::hash_to_scalar(bool_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:27:25
     |
  27 |         let b: scalar = Pedersen64::hash_to_scalar(bool_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:28:25
     |
  28 |         let c: scalar = Pedersen64::hash_to_scalar(bool_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:29:25
     |
  29 |         let d: scalar = Pedersen64::hash_to_scalar(bool_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:30:25
     |
  30 |         let e: scalar = Pedersen64::hash_to_scalar(i8_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:31:25
     |
  31 |         let f: scalar = Pedersen64::hash_to_scalar(i16_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:32:25
     |
  32 |         let g: scalar = Pedersen64::hash_to_scalar(i32_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:33:25
     |
  33 |         let i: scalar = Pedersen64::hash_to_scalar(u8_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:34:25
     |
  34 |         let j: scalar = Pedersen64::hash_to_scalar(u16_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:35:25
     |
  35 |         let k: scalar = Pedersen64::hash_to_scalar(u32_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:36:25
     |
  36 |         let m: scalar = Pedersen64::hash_to_scalar(bool_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:38:25
     |
  38 |         let n: scalar = Pedersen64::hash_to_scalar(bool_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
